--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "qs": "^6.10.1"
   },
   "devDependencies": {}
 }
